Refactored menu system, next to change is land system